Refactored colors, filled in descriptions, changed photos and styles

--- a/html/about-me.html
+++ b/html/about-me.html
@@ -19,7 +19,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-pink w3-card">
+  <div class="w3-bar custom-nav w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="toggleMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="/home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="/resume" class="w3-bar-item w3-button w3-padding-large w3-hide-small">RESUME</a>
@@ -51,13 +51,13 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <!-- The Grid -->
   <div  style="margin-top: 75px">
 
-    <div class="w3-pink w3-card" style="width: 300px; height: 3125px;position: absolute;z-index: -999"></div>
+    <div class="custom-accent-color w3-card" style="width: 300px; height: 3125px;position: absolute;z-index: -999"></div>
 
     <div class="w3-container" style="height: 50px;background-color: transparent;"></div>
 
     <div class="w3-container w3-card custom-card-background custom-text-body" style="height: auto;margin-left: 25px;margin-bottom: 10px;width: 100%;text-align: left;">
       <h1>About me</h1>
-      <button class="w3-button w3-pink" id="toggle-cards">Professional</button>
+      <button class="w3-button custom-accent-darkened custom-text-darkened" id="toggle-cards">Professional</button>
       <p class="small">Click to swap</p>
     </div>
 
@@ -68,31 +68,31 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="left-text" style="background-position: center;background-size: cover;">
             <h1>Experience</h1>
-            <h3><span class="w3-text-pink">8 years</span> of programming experience</h3>
+            <h3><span class="custom-text-accent">8 years</span> of programming experience</h3>
             <h4>- After starting with C++, I've used Python, Ruby, Bash, Go, and Java</h4>
-            <h3><span class="w3-text-pink">7 years</span> of experience using Java</h3>
+            <h3><span class="custom-text-accent">7 years</span> of experience using Java</h3>
             <h4>- Java has been my main language since my first semester at UNCC, and I've used it in all my professional positions</h4>
-            <h3><span class="w3-text-pink">5 years</span> of professional experience</h3>
+            <h3><span class="custom-text-accent">5 years</span> of professional experience</h3>
             <h4>- Starting in January of 2019 at The Hartford insurance company, I know what it takes to thrive in an enterprise environment</h4>
-            <h3><span class="w3-text-pink">4 years</span> of experience developing RESTful APIs</h3>
+            <h3><span class="custom-text-accent">4 years</span> of experience developing RESTful APIs</h3>
             <h4>- Migrated The Hartford's PolicyCenter SOAP services to RESTful services</h4>
             <h4>- At Booz Allen, my focus has been on developing and improving a suite of RESTful APIs for the Department of Veteran's Affairs</h4>
-            <h3><span class="w3-text-pink">2 years</span> of experience developing with Sprint Boot</h3>
+            <h3><span class="custom-text-accent">2 years</span> of experience developing with Sprint Boot</h3>
             <h4>- My team oversees several different APIs, all written with Spring Boot & integrated with Swagger</h4>
           </div>
         </div>
         <div class="about-dynamic-card-back">
-          <div class="left-image" style="background-image: url('/media/northern-lights.jpg');background-position: center;background-size: cover;">
+          <div class="left-image" style="background-image: url('/media/start_photo.jpg');background-position: center;background-size: cover;">
           </div>
           <div class="right-text" style="background-position: center;background-size: cover;">
             <h1>What got me started</h1>
-            <h3><span class="w3-text-pink">How things work</span></h3>
+            <h3><span class="custom-text-accent">How things work</span></h3>
             <h4>- I've always had an interest in how things work.</h4>
             <h4>- I've been called a "Tinkerer", and I have to say its an accurate nickname.</h4>
-            <h3><span class="w3-text-pink">Problem Solving</span></h3>
+            <h3><span class="custom-text-accent">Problem Solving</span></h3>
             <h4>- A fascination with technology alongside a propensity for problem solving, IT was a natural place for me.</h4>
             <h4>- Whether its fixing a deployment bug or trying to get a new feature to work, I get a lot of joy from figuring things out.</h4>
-            <h3><span class="w3-text-pink">From class to career</span></h3>
+            <h3><span class="custom-text-accent">From class to career</span></h3>
             <h4>- After some self-taught fumbling, I took the first programming course that came my way.</h4>
             <h4>- Since then, I have found myself in a rare situation: with a career that I am both good at <b>and</b> find interesting!</h4>
           </div>
@@ -107,28 +107,28 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="right-text" style="background-position: center;background-size: cover;">
             <h1>My responsibilities</h1>
-            <h3><span class="w3-text-pink">Implementation</span></h3>
+            <h3><span class="custom-text-accent">Implementation</span></h3>
             <h4>- When it comes to handling large scale refactoring, re-architecture, or new feature implementation, I'm the go-to member of my team</h4>
-            <h3><span class="w3-text-pink">Test Driven Development</span></h3>
+            <h3><span class="custom-text-accent">Test Driven Development</span></h3>
             <h4>- Through Unit and Integration tests, I work to ensure that our code base reaches a minimum 95% code coverage</h4>
-            <h3><span class="w3-text-pink">Automation</span></h3>
+            <h3><span class="custom-text-accent">Automation</span></h3>
             <h4>- Bash scripts, CRON jobs, and occasionaly python: I am awlays looking for ways to automate & improve our day to day processes</h4>
-            <h3><span class="w3-text-pink">Integration</span></h3>
+            <h3><span class="custom-text-accent">Integration</span></h3>
             <h4>- Collaborating with other teams to design itegrations between platforms is at the core of my responsibilities</h4>
           </div>
         </div>
         <div class="about-dynamic-card-back">
-          <div class="right-image" style="background-image: url('/media/benji.jpg');background-position: center;background-size: cover;">
+          <div class="right-image" style="background-image: url('/media/drive_photo.jpg');background-position: center;background-size: cover;">
           </div>
           <div class="left-text" style="background-position: center;background-size: cover;padding-right:125px;">
             <h1>What drives me</h1>
-            <h3><span class="w3-text-pink">Problem Solving</span></h3>
+            <h3><span class="custom-text-accent">Problem Solving</span></h3>
             <h4>- You've probably noticed this one a few times on this site already!</h4>
             <h4>- I've repeated it for a good reason - solving problems is my biggest draw to this line of work.</h4>
-            <h3><span class="w3-text-pink">Learning</span></h3>
+            <h3><span class="custom-text-accent">Learning</span></h3>
             <h4>- Learning new languages/frameworks/technologies quickly is something I pride myself on. Its also something I look for in a role.</h4>
             <h4>- Personal growth is important to me in the positions I take. I am motivated by learning things I didn't know before</h4>
-            <h3><span class="w3-text-pink">Teaching others</span></h3>
+            <h3><span class="custom-text-accent">Teaching others</span></h3>
             <h4>- On my teams, I'm typically the "nobody knows how this works, go try to figure it out" guy</h4>
             <h4>- I also love to pass along what I've learned to others, I have a knack for explaining things in a way people will understand (especially non-technical folks!)</h4>
           </div>
@@ -143,30 +143,30 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="left-text" style="background-position: center;background-size: cover;">
             <h1>What am I looking for?</h1>
-            <h3><span class="w3-text-pink">A role</span> that challenges me</h3>
+            <h3><span class="custom-text-accent">A role</span> that challenges me</h3>
             <h4>- As a fast learner, I like to put my skills to the test picking up new languages and technologies.</h4>
-            <h3><span class="w3-text-pink">A team</span> that works cohesively</h3>
+            <h3><span class="custom-text-accent">A team</span> that works cohesively</h3>
             <h4>- I thrive in a team environment that prioritizes growth and transparent communication.</h4>
-            <h3><span class="w3-text-pink">A culture</span> that fosters growth</h3>
+            <h3><span class="custom-text-accent">A culture</span> that fosters growth</h3>
             <h4>- I am motivated by workplaces that recognize and reward hard work, while emphasizing personal development</h4>
-            <h3><span class="w3-text-pink">A product</span> that is constantly improving</h3>
+            <h3><span class="custom-text-accent">A product</span> that is constantly improving</h3>
             <h4>- I am drawn to products that allow me to be a part of building something new</h4>
             <h4>- New feature implementation being one of my strongest skill sets</h4>
           </div>
         </div>
         <div class="about-dynamic-card-back">
-          <div class="left-image" style="background-image: url('/media/northern-lights.jpg');background-position: center;background-size: cover;">
+          <div class="left-image" style="background-image: url('/media/future_photo.jpg');background-position: center;background-size: cover;">
           </div>
           <div class="right-text" style="background-position: center;background-size: cover;">
             <h1>Where I want to be</h1>
-            <h3><span clas="w3-text-pink">Future roles</span></h3>
+            <h3><span clas="custom-text-accent">Future roles</span></h3>
             <h4>- I'm looking for a role that helps me grow my current skill sets</h4>
             <h4>- In the not-too-distantant-future, I aim to be in a leadership position on an engineering team</h4>
-            <h3><span class="w3-text-pink">Languages & Technologies</span></h3>
+            <h3><span class="custom-text-accent">Languages & Technologies</span></h3>
             <h4>- I plan to sharpen my skills with languages I've used more sparingly, such as Python and Go</h4>
             <h4>- I am in the process of honing my Bash & Linux skills (hosting this site for example!)</h4>
             <h4>- I'd love to get more practical networking experience</h4>
-            <h3><span class="w3-text-pink">Companies and teams</span></h3>
+            <h3><span class="custom-text-accent">Companies and teams</span></h3>
             <h4>- Work with people who love what they do at a company that wants to build something new</h4>
             <h4>- I always aim to surround myself with awesome people working on an awesome product!</h4>
           </div>
@@ -177,19 +177,19 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="about-dynamic-card" style="margin-left:25px">
       <div class="about-dynamic-card-inner">
         <div class="about-dynamic-card-front">
-          <div class="left-image" style="background-image: url('/media/northern-lights.jpg');background-position: left;background-size: cover;">
+          <div class="left-image" style="background-image: url('/media/you_photo.jpg');background-position: left;background-size: cover;">
           </div>
           <div class="right-text" style="background-position: center;background-size: cover;">
             <h1>What are you looking for?</h1>
-            <h3><span class="w3-text-pink">An employee</span> that is motivated</h3>
+            <h3><span class="custom-text-accent">An employee</span> that is motivated</h3>
             <h4>- You're looking for somebody who will go the extra mile to contribute positively to a great product</h4>
-            <h3><span class="w3-text-pink">A team member</span> who can collorate with others</h3>
+            <h3><span class="custom-text-accent">A team member</span> who can collorate with others</h3>
             <h4>- You want someone who excels at transparent communication and has experience in a collaborative environment</h4>
-            <h3><span class="w3-text-pink">A developer</span> who thinks outside of the box</h3>
+            <h3><span class="custom-text-accent">A developer</span> who thinks outside of the box</h3>
             <h4>- You're looking for a developer that can innovate; Someone who isn't afraid to be wrong</h4>
-            <h3><span class="w3-text-pink">An expert</span> who is eager to contribute to something awesome</h3>
+            <h3><span class="custom-text-accent">An expert</span> who is eager to contribute to something awesome</h3>
             <h4>- You have a great product that you want to see reach its full potential, and you're looking for someone who shares that sentiment</h4>
-            <h2 class="w3-text-pink">Do I fit the bill?</h2>
+            <h2 class="custom-text-accent">Do I fit the bill?</h2>
             <a class="medium-text" href="/contact">Contact me today</a>
           </div>
         </div>
@@ -198,14 +198,14 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="left-text">
             <h1>What I like to do</h1>
-            <h3><span class="w3-text-pink">Music</span></h3>
+            <h3><span class="custom-text-accent">Music</span></h3>
             <h4>- Music has always been a big part of my life, and it takes many forms in my hobbies, from playing it on guitar & piano
               to listening to it through enthusiast grade equipment.
             </h4>
-            <h3><span class="w3-text-pink">Travel</span></h3>
+            <h3><span class="custom-text-accent">Travel</span></h3>
             <h4>- Me & my family love seeing crazy new places and sharing in unique experiences. We make a point to have 1 big trip a year to somewhere new</h4>
             <h4>- For example, I was able to snap the picture on the right of the northern lights in Akureyri, Iceland in September of 2023!</h4>
-            <h3><span class="w3-text-pink">Self Hosting</span></h3>
+            <h3><span class="custom-text-accent">Self Hosting</span></h3>
             <h4>- This very site is currently being hosted in a docker container on my home server!</h4>
             <h4>- Starting out just as a way to learn Linux a bit better, I've ended up hosting a lot of my own services!</h4>
             <h4>- Some of these include media servers for photos, vidoes, and music, as well as password management tools.</h4>
