--- a/html/about-site.html
+++ b/html/about-site.html
@@ -19,7 +19,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-pink w3-card">
+  <div class="w3-bar custom-nav w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="toggleMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="/home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="/resume" class="w3-bar-item w3-button w3-padding-large w3-hide-small">RESUME</a>
@@ -27,7 +27,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
       <button class="w3-padding-large w3-button" title="More">ABOUT <i class="fa fa-caret-down"></i></button>     
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a href="/about-me" class="w3-bar-item w3-button">ME</a>
-        <a href="#" class="w3-bar-item w3-button">THIS SITE</a>
+        <a href="/about-site" class="w3-bar-item w3-button">THIS SITE</a>
       </div>
     </div>
     <a href="/contact" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT ME</a>
@@ -40,6 +40,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <a href="/home" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()">HOME</a>
   <a href="/resume" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()">RESUME</a>
   <a href="/about-me" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()">ABOUT ME</a>
+  <a href="/about-site" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()">ABOUT SITE</a>
   <a href="/contact" class="w3-bar-item w3-button w3-padding-large" onclick="toggleMenu()">CONTACT ME</a>
 </div>
 
@@ -61,7 +62,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-container w3-card custom-card-background w3-margin-bottom" style="padding-bottom: 25px;">
         <img  src="../media/docker.png" style="width:33.33%;right: 200px;position: absolute;margin-top: 15px;">
         <div class="w3-container custom-text-body" style="text-align: Left;">
-            <h2 class="w3-text-pink">Golang Web App</h2>
+            <h2 class="custom-text-accent">Golang Web App</h2>
             <br>
             <h4 class="small">Go HTTP Server</h4>
             <hr class="thinline">
@@ -82,7 +83,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-container w3-card custom-card-background w3-margin-bottom" style="padding-bottom: 25px;">
         <img  src="../media/nginx.png" style="width:33.33%;right: 200px;position: absolute">
         <div class="w3-container custom-text-body" style="text-align: Left;">
-            <h2 class="w3-text-pink">Hosting</h2>
+            <h2 class="custom-text-accent">Hosting</h2>
             <br>
             <h4 class="small">Nginx Proxy Manager + Cloudflare</h4>
             <hr class="thinline">
@@ -105,7 +106,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     <div class="w3-container w3-card custom-card-background w3-margin-bottom" style="padding-bottom: 25px;">
         <img  src="../media/linux.png" style="width:33.33%;right: 200px;margin-top: 25px;position: absolute">
         <div class="w3-container custom-text-body" style="text-align: Left;">
-            <h2 class="w3-text-pink">Server</h2>
+            <h2 class="custom-text-accent">Server</h2>
             <br>
             <h4 class="small">Ubuntu Server VM</h4>
             <hr class="thinline">
