--- a/html/home.html
+++ b/html/home.html
@@ -19,7 +19,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-pink w3-card">
+  <div class="w3-bar custom-nav w3-card">
     <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="toggleMenu()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="/home" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="/resume" class="w3-bar-item w3-button w3-padding-large w3-hide-small">RESUME</a>
@@ -52,7 +52,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
   <div  style="margin-top: 45px;height: 1000px;background-color: transparent;">
 
     <div class="w3-container custom-text-body" style="text-align: center;height: 100px;background-color: transparent;padding-top: 400px;">
-        <h1 class="extra-large" style="font-family: 'Abril Fatface', serif;">Hi, I'm <span class="w3-text-pink">Rhys Bratti.</span></h1>
+        <h1 class="extra-large" style="font-family: 'Abril Fatface', serif;">Hi, I'm <span class="custom-text-accent">Rhys Bratti.</span></h1>
         <h2 style="font-family: 'Lato', serif;line-height: .3;">${ s o f t w a r e _ e n g i n e e r }</h2>
       </div>
     <div style="background-color: transparent;padding-top: 1000px">
@@ -114,7 +114,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 <footer class="w3-container  w3-center w3-margin-top" style="background-color: transparent;">
   <p>Find me on Linkedin</p>
-  <i class="fa fa-linkedin w3-text-pink w3-hover-opacity"></i>
+  <i class="fa fa-linkedin custom-text-accent w3-hover-opacity"></i>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
 
