Optimizing for mobile

--- a/html/contact.html
+++ b/html/contact.html
@@ -70,7 +70,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
                     {{if .Success}}
                         <p class="custom-text-accent">Your message has been sent. I'll get back to you as soon as possible!</p>
                     {{else}}
-                        <input class="w3-button custom-accent-color" type="submit" value="Send message">
+                        <input class="w3-button custom-accent-darkened custom-text-darkened" type="submit" value="Send message">
                     {{end}}
                     </form>
             </div>
