--- a/html/about-me.html
+++ b/html/about-me.html
@@ -86,8 +86,8 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           <div class="right-text" style="background-position: center;background-size: cover;">
             <h1>What got me started</h1>
             <h3><span class="custom-text-accent">How things work</span></h3>
-            <h4>- I've always had an interest in how things work.</h4>
-            <h4>- I've been called a "Tinkerer", and I have to say its an accurate nickname.</h4>
+            <h4>- I've always been interested in knowing how things work, taking things apart and putting them back together</h4>
+            <h4>- I've been called a "Tinkerer", I like to dig down into the nitty gritty detail and see what I can find.</h4>
             <h3><span class="custom-text-accent">Problem Solving</span></h3>
             <h4>- A fascination with technology alongside a propensity for problem solving, IT was a natural place for me.</h4>
             <h4>- Whether its fixing a deployment bug or trying to get a new feature to work, I get a lot of joy from figuring things out.</h4>
@@ -158,7 +158,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="right-text" style="background-position: center;background-size: cover;">
             <h1>Where I want to be</h1>
-            <h3><span clas="custom-text-accent">Future roles</span></h3>
+            <h3><span class="custom-text-accent">Future roles</span></h3>
             <h4>- I'm looking for a role that helps me grow my current skill sets</h4>
             <h4>- In the not-too-distantant-future, I aim to be in a leadership position on an engineering team</h4>
             <h3><span class="custom-text-accent">Languages & Technologies</span></h3>
@@ -197,8 +197,9 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
           </div>
           <div class="left-text">
             <h1>What I like to do</h1>
+            <h2>Outside of work</h2>
             <h3><span class="custom-text-accent">Music</span></h3>
-            <h4>- Music has always been a big part of my life, and it takes many forms in my hobbies, from playing it on guitar & piano
+            <h4>- Music has always been a big part of my life. It takes many forms in my hobbies, from playing guitar and piano
               to listening to it through enthusiast grade equipment.
             </h4>
             <h3><span class="custom-text-accent">Travel</span></h3>
