More mobile formatting, did the best I could. Who invented CSS?

--- a/html/about-site.html
+++ b/html/about-site.html
@@ -59,7 +59,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 
 
     <div class="w3-container w3-card custom-card-background w3-margin-bottom" style="padding-bottom: 25px;">
-        <img  src="../media/docker.png" style="width:33.33%;right: 200px;position: absolute;margin-top: 15px;">
+        <img class="right-aligned" src="../media/docker.png">
         <div class="w3-container custom-text-body" style="text-align: Left;">
             <h2 class="custom-text-accent">Golang Web App</h2>
             <br>
@@ -80,7 +80,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
 
     <div class="w3-container w3-card custom-card-background w3-margin-bottom" style="padding-bottom: 25px;">
-        <img  src="../media/nginx.png" style="width:33.33%;right: 200px;position: absolute">
+        <img  src="../media/nginx.png" class="right-aligned">
         <div class="w3-container custom-text-body" style="text-align: Left;">
             <h2 class="custom-text-accent">Hosting</h2>
             <br>
@@ -103,7 +103,7 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
     </div>
 
     <div class="w3-container w3-card custom-card-background w3-margin-bottom" style="padding-bottom: 25px;">
-        <img  src="../media/linux.png" style="width:33.33%;right: 200px;margin-top: 25px;position: absolute">
+        <img  src="../media/linux.png" class="right-aligned">
         <div class="w3-container custom-text-body" style="text-align: Left;">
             <h2 class="custom-text-accent">Server</h2>
             <br>
